# tpu_compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_mytpu.md  README_mytpu_debug.md  README_tpu.md  README_tpu_breakdown.md  README_tpu_debug.md  TODO_tpu.md  build.sh  build_soc.sh  build_soc_32bit.sh  build_update.sh  caffe_model.py  clean.sh  cvitek_envs.sh  envsetup.sh  get_code.sh  regression.sh  regression_1_fp32.sh  regression_2_int8.sh  regression_3_cmdbuf.sh  regression_3_int8_cmdbuf.sh  regression_4_bf16.sh  regression_5_bf16_cmdbuf.sh  regression_mobilenet_v1_1_fp32.sh  regression_mobilenet_v2_1_fp32.sh  regression_mobilenet_v2_2_int8.sh  regression_mobilenet_v2_3_int8_cmdbuf.sh  regression_mobilenet_v2_4_bf16.sh  regression_mobilenet_v2_5_bf16_cmdbuf.sh  release.sh  requirements.txt  resnet-50_20190816_29a4a80f-v2.mlir  resnet-50_20190901_d46a84fb.mlir  resnet-50_20190921_e92b6c5c.mlir  run_accuracy.sh  run_accuracy_mobilenet_v2.sh  update_code.sh  (+1 more)
bindings/python/: CMakeLists.txt  pymlir.cpp  pytuner.cpp
bindings/python/pybind/: CMakeLists.txt  pybind.cpp
bindings/python/test/: test_py2and3.py
bindings/python/tools/: eval_imagenet_gluoncv.py  eval_imagenet_pytorch.py  eval_retinaface_on_widerface.py  eval_ssd.py  eval_yolo.py  kld_calibrator.py  run_calibration.py  run_classification.py  run_inference.py  run_yolo.py
examples/custom_op/code/: CMakeLists.txt
examples/custom_op/code/my_add/: MyAddOp.cpp  MyAddOp.h
examples/custom_op/code/my_mul/: MyMulOp.cpp  MyMulOp.h
examples/custom_op/code/python/: my_layer.py
lib/Dialect/TPU/: CMakeLists.txt
lib/Dialect/TPU/Analysis/: GenFakeWeightNpz.cpp  TpuOpPrint.cpp  TpuOpStats-v0.cpp  TpuOpStats.cpp
lib/Dialect/TPU/Backend/: MachineInfo.cpp  TpuTgCodegen.cpp  TpuTlCodegen_LG.cpp  TpuTlCodegen_Simple.cpp
lib/Dialect/TPU/Backend/Kernel/: BM1880v2BackendContext.cpp  BackendContext.h  CviBackendContext.cpp  CviBackendContext.h  README.md  TgArgMaxKernel.cpp  TgArgMaxKernel.hpp  TgBf16BroadcastKernel.cpp  TgBf16ConcatKernel.cpp  TgBf16Conv3dKernel.cpp  TgBf16ConvFcKernel.cpp  TgBf16ConvFcKernel.hpp  TgBf16FcKernel.cpp  TgBf16GruKernel.cpp  TgBf16GruKernel.hpp  TgBf16LayerNormKernel.cpp  TgBf16LrnKernel.cpp  TgBf16LstmKernel.cpp  TgBf16LstmKernel.hpp  TgBf16MatMulKernel.cpp  TgBf16MatchTemplateKernel.cpp  TgBf16Pooling3dKernel.cpp  TgBf16PoolingKernel.cpp  TgBf16PreluKernel.cpp  TgBf16ReduceKernel.cpp  TgBf16ReluKernel.cpp  TgBf16ScaleKernel.cpp  TgBf16SoftmaxKernel.cpp  TgBf16SoftmaxKernel.hpp  TgBf16SquareKernel.cpp  TgBf16SquareKernel.hpp  TgBf16StdKernel.cpp  TgBroadcastKernel.cpp  TgBroadcastKernel.hpp  TgCastKernel.cpp  TgConcatKernel.cpp  TgConcatKernel.hpp  TgConvKernel.cpp  TgConvKernel.hpp  TgCopyKernel.cpp  (+155 more)
lib/Dialect/TPU/Backend/test/: avg_pool.mlir  broadcast.mlir  broadcast_add.mlir  broadcast_mul.mlir  broadcast_sub.mlir  compile.sh  compile_bf16.sh  concat.mlir  conv.mlir  conv3d.mlir  conv_1_oc.mlir  conv_large_w.mlir  copy.mlir  (+36 more)
lib/Dialect/TPU/Conversion/: ImportCalibrationTable.cpp  QuantizeInt8PerLayer.cpp
lib/Dialect/TPU/DeepFusion/: CMakeLists.txt  ConvertTG2TL_LA.cpp  ConvertTL_LA2LW.cpp  DeepFusionGroupSlice.cpp  MachineInfo.h  SimpleAnalysis.cpp  SimpleAnalysis.h  SimpleDeepFusion.cpp
lib/Dialect/TPU/IR/: CpuLayer_DetectionOutput.cpp  DialectRegistration.cpp  TPUCompressUtil.cpp  TPUCompressUtilTest.cpp  TPUDialect.cpp  TPUOperationSupport.cpp  TPUTensorSupport.cpp  WeightFileOp.cpp
lib/Dialect/TPU/Interpreter/: BM1880v2BackendContext.cpp  BM1880v2BackendContext.h  BackendContext.h  CMakeLists.txt  CpuLayer_DetectionOutput.cpp  GPUImplementation.cu  MlirModuleInterpreter.cpp  NativeCpuImplementation.cpp  TpuInterpreter.cpp  TpuInterpreter_v2.cpp  bmnet_tg_api.h  conv_parallel_bmkernel.cpp  conv_parallel_bmkernel.h  conv_parallel_bmkernel_qdm.cpp  dma_legacy_bmkernel.cpp  eltwise_bmkernel.cpp  fc_parallel_bmkernel.cpp  pooling_bmkernel.cpp  relu_bmkernel.cpp
lib/Dialect/TPU/MemRefLowering/: AssignNeuronAddressMemRef.cpp  CMakeLists.txt  ConvertFuncToMemRef.cpp  ConvertFuncToTensor.cpp  ConvertTgOpToMemRef.cpp  ConvertTgOpToTensor.cpp
lib/Dialect/TPU/Optimization/: AddTpuPreprocess.cpp  ConvTile.cpp  DoEarlyStride.cpp  FullyConnectedTile.cpp  FuseLeakyRelu.cpp  GraphOpt.cpp  GraphOpt.h  MergeConvConvPool.cpp  MergePermute.cpp  PoolingTile.cpp  SimpleAnalysis.cpp  SplitPool.cpp  TgOpDivide.cpp  TgOpTile.cpp  TgOpTile.h
lib/Dialect/TPU/Plugin/: CustomOpPlugin.cpp
lib/Dialect/TPU/Quantization/: GenDivTable.cpp  GenLrnTable.cpp  GenLutBf16Table.cpp  GenLutInt8Table.cpp  GenReciprocalTable.cpp  GenSigmoidTable.cpp  GenSqrtTable.cpp  GenTanHTable.cpp  ImportCalibrationTable.cpp  Quantization.cpp  QuantizationArithmetic.cpp  QuantizationUtils.cpp  QuantizeBf16.cpp  QuantizeInt8.cpp
lib/Dialect/TPU/Transforms/: AssignChipName.cpp  AssignLayerId.cpp  AssignNeuronAddress.cpp  AssignWeightAddress.cpp  Canonicalizer.cpp  ChangeBatchSize.cpp  CompressActivation.cpp  CompressWeight.cpp  ConvertBnToScale.cpp  ConvertClip.cpp  ConvertConv2D.cpp  ConvertConv3D.cpp  ConvertCpuOp.cpp  ConvertCsc.cpp  ConvertFullyConnected.cpp  ConvertInterp.cpp  ConvertLrn.cpp  ConvertLstmCaffe.cpp  ConvertMatMul.cpp  ConvertMatchTemplate.cpp  ConvertMulConst.cpp  ConvertNormalize.cpp  ConvertPermute.cpp  ConvertPoolMask.cpp  ConvertPoolMaskOp.cpp  ConvertPower.cpp  ConvertPriorBoxToLoadWeight.cpp  ConvertQuantOp.cpp  ConvertScale.cpp  ConvertScaleToDWConv.cpp  ConvertSwapChannel.cpp  ConvertSwish.cpp  ConvertSwishToRelu.cpp  ConvertTile.cpp  ConvertUpsample.cpp  ConvertUpsampleToDeconv.cpp  DivideOpsToFunc.cpp  DivideOpsToSubFunc.cpp  FoldScale.cpp  FuseAsymmetricZeroPointShift.cpp  (+21 more)
lib/Dialect/TPU/Translate/: CMakeLists.txt  CaffeToMlirTranslate-v1.cpp  CaffeToMlirTranslate-v2.cpp  CaffeToMlirTranslate-v3.cpp  CaffeToMlirTranslate.cpp  MlirToBackendTranslate.cpp  MlirToCviModelTranslate.cpp  buildCviModel.cpp
tools/mlir-tpu-interpreter/: CMakeLists.txt  mlir-tpu-interpreter.cpp
tools/mlir-translate/: CMakeLists.txt  mlir-translate.cpp
tools/mlir-translate/python_translate/: pyimporter.py
(+1263 files in other folders)
